[gd_scene load_steps=10 format=3 uid="uid://d2hakxnwblfja"]

[ext_resource type="Script" path="res://codex/scripts/codex.gd" id="1_hin5s"]
[ext_resource type="Shader" path="res://codex/scripts/codex.gdshader" id="2_1kil2"]
[ext_resource type="Script" path="res://codex/scripts/codex_button.gd" id="3_efddu"]
[ext_resource type="Script" path="res://codex/scripts/codex_page.gd" id="4_x4b2x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8uvpn"]
shader = ExtResource("2_1kil2")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4oyuf"]
bg_color = Color(0.976471, 0.984314, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhkaa"]
bg_color = Color(0.976471, 0.984314, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rxtxt"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5twju"]
bg_color = Color(0, 0, 0, 1)

[node name="CodexMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hin5s")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8uvpn")
layout_mode = 0
offset_left = 75.0
offset_top = 22.0
offset_right = 1227.0
offset_bottom = 664.0

[node name="CodexContentsControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 644.0

[node name="TableOfContentsRight" type="Panel" parent="CodexContentsControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0804678
anchor_top = 0.0011449
anchor_right = 0.504948
anchor_bottom = 0.948918
offset_left = 545.382
offset_top = 11.2627
offset_right = 545.382
offset_bottom = 11.2627
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_4oyuf")
metadata/_edit_use_anchors_ = true

[node name="CodexPagesText" type="Label" parent="CodexContentsControl/TableOfContentsRight"]
layout_mode = 0
offset_left = 179.0
offset_top = 37.0
offset_right = 263.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Pages
"

[node name="CodexEnemyControl" type="Control" parent="CodexContentsControl/TableOfContentsRight"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.5
offset_top = -195.5
offset_right = -97.5
offset_bottom = -155.5
grow_horizontal = 2
grow_vertical = 2

[node name="CodexEnemiesLabel" type="Label" parent="CodexContentsControl/TableOfContentsRight/CodexEnemyControl"]
layout_mode = 1
offset_right = 82.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Enemies
"

[node name="BoxEnemyButton" type="Button" parent="CodexContentsControl/TableOfContentsRight/CodexEnemyControl" groups=["PageButtons"]]
unique_name_in_owner = true
layout_mode = 1
offset_top = 26.0
offset_right = 233.0
offset_bottom = 43.0
scale = Vector2(1, 0.96)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_hhkaa")
text = "Box Enemy.................................................1"
alignment = 0
script = ExtResource("3_efddu")

[node name="BoxEnemyButton2" type="Button" parent="CodexContentsControl/TableOfContentsRight/CodexEnemyControl" groups=["PageButtons"]]
unique_name_in_owner = true
layout_mode = 1
offset_left = -11.6788
offset_top = 51.1835
offset_right = 303.321
offset_bottom = 76.1835
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_hhkaa")
text = "Box Enemy 2..............................................2"
alignment = 0
script = ExtResource("3_efddu")

[node name="BoxEnemyButton3" type="Button" parent="CodexContentsControl/TableOfContentsRight/CodexEnemyControl" groups=["PageButtons"]]
unique_name_in_owner = true
layout_mode = 1
offset_left = -2.0
offset_top = 72.9999
offset_right = 313.0
offset_bottom = 97.9999
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_hhkaa")
text = "Box Enemy 3...............................................3
"
alignment = 0
script = ExtResource("3_efddu")

[node name="TableOfContentsLeft" type="Panel" parent="CodexContentsControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.421286
anchor_top = 0.00288846
anchor_right = -0.0520421
anchor_bottom = 0.951646
offset_left = 537.901
offset_top = 12.1398
offset_right = 537.901
offset_bottom = 12.1398
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4oyuf")

[node name="CodexProgressText" type="Label" parent="CodexContentsControl/TableOfContentsLeft"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -21.0
offset_right = 160.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Codex Progress: 0/100
"

[node name="CodexProgressBar" type="ProgressBar" parent="CodexContentsControl/TableOfContentsLeft"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.5
offset_top = 32.5
offset_right = 170.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.987727, 0.218232, 0.183159, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_rxtxt")
theme_override_styles/fill = SubResource("StyleBoxFlat_5twju")
step = 1.0

[node name="CodexMainPagesControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CodexLeftPage" type="Panel" parent="CodexMainPagesControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -12.3095
anchor_top = 0.0184329
anchor_right = -1.68454
anchor_bottom = 15.3434
offset_left = 545.382
offset_top = 11.2627
offset_right = 545.382
offset_bottom = 11.2627
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_4oyuf")
script = ExtResource("4_x4b2x")
metadata/_edit_use_anchors_ = true

[node name="LeftPageImage" type="Sprite2D" parent="CodexMainPagesControl/CodexLeftPage"]
unique_name_in_owner = true
position = Vector2(167.998, 147)

[node name="LeftPageTitle" type="Label" parent="CodexMainPagesControl/CodexLeftPage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.5012
offset_top = 46.0
offset_right = 75.4988
offset_bottom = 69.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Box Enemy
"
autowrap_mode = 2

[node name="LeftPageDescription" type="Label" parent="CodexMainPagesControl/CodexLeftPage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = -11.5
offset_right = 139.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "It's Game Over Man, It's Game Over!
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LeftPageNumber" type="Label" parent="CodexMainPagesControl/CodexLeftPage"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 21.0
offset_top = 579.0
offset_right = 50.0
offset_bottom = 602.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "-69,420"

[node name="CodexRightPage" type="Panel" parent="CodexMainPagesControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 3.46545
anchor_top = 0.0184325
anchor_right = 14.0904
anchor_bottom = 15.3434
offset_left = 545.382
offset_top = 11.2627
offset_right = 545.382
offset_bottom = 11.2627
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_4oyuf")
script = ExtResource("4_x4b2x")
metadata/_edit_use_anchors_ = true

[node name="RightPageImage" type="Sprite2D" parent="CodexMainPagesControl/CodexRightPage"]
position = Vector2(212, 147)

[node name="RightPageTitle" type="Label" parent="CodexMainPagesControl/CodexRightPage"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.5012
offset_top = 46.0
offset_right = 75.4988
offset_bottom = 69.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Sample Description
"
autowrap_mode = 2

[node name="RightPageDescription" type="Label" parent="CodexMainPagesControl/CodexRightPage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = -11.5
offset_right = 139.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "It's Game Over Man, It's Game Over!
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RightPageNumber" type="Label" parent="CodexMainPagesControl/CodexRightPage"]
layout_mode = 0
offset_left = 355.0
offset_top = 579.0
offset_right = 411.0
offset_bottom = 602.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "-69,420"

[connection signal="codexButtonPressed" from="CodexContentsControl/TableOfContentsRight/CodexEnemyControl/BoxEnemyButton" to="." method="_on_table_contents_button_pressed"]
[connection signal="codexButtonPressed" from="CodexContentsControl/TableOfContentsRight/CodexEnemyControl/BoxEnemyButton2" to="." method="_on_table_contents_button_pressed"]
[connection signal="codexButtonPressed" from="CodexContentsControl/TableOfContentsRight/CodexEnemyControl/BoxEnemyButton3" to="." method="_on_table_contents_button_pressed"]
